# comfyui-timesaver

./: .comfyignore  .gitignore  .tracking  AGENTS.md  CLAUDE.md  LICENSE.txt  MODERNIZATION_PLAN.md  README.md  README.ru.md  TECH_DEBT_AUDIT.md  __init__.py  nodes.py  pyproject.toml  qwen_3_vl_presets.json  requirements.txt  ts_bgrm_node.py  ts_color_match_node.py  ts_color_node.py  ts_crop_to_mask_node-copy.py  ts_crop_to_mask_node-gemimi.py  ts_crop_to_mask_node.py  ts_cube_to_equirect_node.py  ts_deflicker_node.py  ts_dependency_manager.py  ts_downloader_node.py  ts_edl_chapters_node.py  ts_equirect_to_cube_node.py  ts_file_browser_node.py  ts_file_path_node.py  ts_film_emulation_node.py  ts_film_grain_node.py  ts_gemma3n_node.py  ts_image_resize_node.py  ts_image_tile_node.py  ts_image_tools_node.py  ts_interface_tools_node.py  ts_lora_tool_node.py  ts_ltx_tools_node.py  ts_marian_translate_node.py  ts_models_tools_node-copy2.py  (+23 more)
.github/workflows/: ci.yml
configs/Qwen3-VL-2B/: config.json  generation_config.json  preprocessor_config.json
configs/Qwen3-VL-4B/: config.json
configs/Qwen3-VL-8B/: config.json  generation_config.json  model.safetensors.index.json
doc/: AGENTS.md  TS_DEPENDENCY_POLICY.md  generate_readme_ru.py  migration.md
js/: AGENTS.md  ts-audio-loader.js  ts-bookmark.js  ts-file-browser.js  ts-resolution-selector.js  ts-slider-settings.js  ts-style-prompt.js  ts-super-prompt.js  ts-voice-recognition.js
js/audio/: ts-audio-loader.js
js/conditioning/: ts-multi-reference.js
js/ideogram/: _ideogram_editor.js  _ideogram_node.js  _ideogram_shared.js  ts-ideogram-designer.js
js/llm/: ts-super-prompt.js
js/text/: ts-prompt-builder.js  ts-style-prompt.js
js/utils/: ts-bookmark.js  ts-float-slider.js
js/video/: ts-animation-preview.js
luts/: Cinematic2.cube  Cinematic4.cube  Fuji.cube
nodes/: AGENTS.md  __init__.py  _shared.py  _whisper_engine.py  qwen_3_vl_presets.json  ts_audio_loader_node.py  ts_bgrm_node.py  ts_color_match_node.py  ts_color_node.py  ts_crop_to_mask_node.py  ts_cube_to_equirect_node.py  ts_file_browser_node.py  ts_file_path_node.py  ts_image_resize_node.py  ts_image_tile_node.py  ts_image_tools_node.py  ts_interface_tools_node.py  ts_keyer_node.py  ts_ltx_tools_node.py  ts_models_tools_node.py  ts_music_stems_node.py  ts_prompt_builder_node.py  ts_qwen3_vl_v3_node.py  ts_resolution_selector.py  ts_rtx_upscaler_node.py  ts_silero_tts_node.py  ts_style_prompt_node.py  ts_super_prompt_node.py  ts_video_upscale_node.py  ts_voice_recognition_node.py  ts_voice_recognition_service.py
nodes/audio/: _audio_helpers.py  ts_audio_loader.py  ts_audio_preview.py  ts_audio_visualizer.py  ts_music_stems.py  ts_silero_tts.py  ts_whisper.py
nodes/conditioning/: ts_image_list_to_images.py  ts_multi_reference.py
nodes/files/: ts_cpu_lora_merger.py  ts_downloader.py  ts_edl_chapters.py  ts_file_path_loader.py  ts_model_converter.py  ts_model_converter_advanced.py  ts_model_converter_advanced_direct.py  ts_model_scanner.py
nodes/frame_interpolation_models/: __init__.py  film_net.py  ifnet.py
nodes/ideogram/: __init__.py  _ideogram_helpers.py  ideogram_fonts.json  ideogram_layouts.json  ideogram_styles.json  ts_ideogram_designer.py
nodes/image/: _angelo_xtrafine.py  ts_auto_tile_size.py  ts_bgrm_birefnet.py  ts_color_grade.py  ts_color_match.py  ts_crop_to_mask.py  ts_cube_to_equirect.py  ts_despill.py  ts_equirect_to_cube.py  ts_film_emulation.py  ts_film_grain.py  ts_get_image_megapixels.py  ts_get_image_size_side.py  ts_image_batch_cut.py  ts_image_batch_to_list.py  ts_image_list_to_batch.py  ts_image_prompt_injector.py  ts_image_resize.py  ts_image_tile_merger.py  ts_image_tile_splitter.py  ts_keyer.py  ts_matting_vitmatte.py  ts_qwen_canvas.py  ts_qwen_safe_resize.py  ts_resolution_selector.py  ts_restore_from_crop.py  ts_smart_inpaint.py  ts_wan_safe_resize.py
nodes/llm/: _qwen_engine.py  ts_qwen3_vl.py  ts_super_prompt.py
nodes/luts/: Cinematic1.cube  Cinematic3.cube
nodes/prompts/: accessories.txt  action-eros.txt  ass-showing.txt  bdsm.txt  breast.txt  camera-angle.txt  camera.txt  color.txt  daytime.txt  dress-eros.txt  emotion-eros.txt  emotion.txt  face.txt  film.txt  gaze.txt  hair-color.txt  hair.txt  interior.txt  jewelry.txt  lense.txt  light.txt  lingerie.txt  (+7 more)
project_memory/: MEMORY.md  feedback_compatibility.md  feedback_full_browser_smoke.md  feedback_god_files_ok.md  feedback_merge_after_each_stage.md  feedback_naming.md  feedback_no_coauthor_footer.md  feedback_one_node_one_file.md  feedback_publish_action_donttouch.md  feedback_russian_responses.md  feedback_terse_summaries.md  feedback_use_comfyui_skill.md  feedback_user_manages_comfyui_lifecycle.md  project_api_mix.md  project_loader.md  project_overview.md  reference_comfy_scanner_rules.md  reference_comfyignore.md  reference_comfyui_python.md  reference_dom_widget_pitfalls.md  reference_dom_widget_rehydrate.md  reference_extension_ids.md  reference_lama_cleanup.md  reference_llm_stack.md  reference_multi_reference_mask.md  reference_playwright.md  reference_sam3_detect_contract.md  reference_tests.md  reference_verification.md  reference_voice_pipeline.md  user_language.md
prompts/: body.txt  breast.txt  jewelry.txt  light.txt  pose.txt  skin.txt  styles.txt  tattoo.txt  ts-prompt-builder-config.json
styles/: styles.json
tests/: AGENTS.md  _engine_stubs.py  conftest.py  test_bgrm_node.py  test_browser_smoke.py  test_comfyui_live_api.py  test_downloader.py  test_image_advanced_nodes.py  test_image_list_to_images.py  test_image_nodes.py  test_lama_cleanup_contract.py  test_multi_reference_node.py  test_no_mojibake.py  test_node_contracts.py  test_pack_imports.py  test_qwen_engine.py  test_static_invariants.py  test_super_prompt_contract.py  test_text_files_audio.py  test_utils_nodes.py  test_video_depth_helpers.py  test_video_llm_nodes.py  test_voice_recognition_audio.py  test_whisper.py
tools/: build_node_contracts.py  convert_lama_to_safetensors.py  preflight.py  screenshot_nodes.py  verify_lama_arch.py
video_depth_anything/: video_depth.py
(+56 files in other folders)
