[project]
name = "comfyui-timesaver"
description = "ComfyUI nodes from [Timesaver](https://github.com/AlexYez/comfyui-timesaver)."
version = "8.0"
license = { file = "LICENSE.txt" }
dependencies = [
    "accelerate>=0.21.0",
    "bitsandbytes>=0.40.0",
    "easydict>=1.10.0",
    "huggingface_hub>=0.20.0",
    "imageio>=2.20.0",
    "imageio-ffmpeg>=0.4.0",
    "matplotlib>=3.4.0",
    "opencv-python>=4.5.0",
    "py360convert>=0.1.0",
    "srt>=3.5.0",
    "urllib3>=1.26.0",
    "tiktoken",
    "qwen-vl-utils>=0.0.8",
    "demucs",
    "geomloss",
    "pykeops",
    "silero"
]

[project.urls]
Repository = "https://github.com/AlexYez/comfyui-timesaver"

[tool.comfy]
PublisherId = "timesaver"
DisplayName = "ComfyUI Timesaver Nodes"
Icon = "icon.png"

